--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Instalar Docker
         run: |
           cd tf
-          sudo apt-get update
-          sudo apt-get install -y docker.io
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
+          sudo usermod -aG docker $USER
           sudo systemctl start docker
           sudo systemctl enable docker
-          sudo usermod -aG docker $USER
           
       # INSTALAR TERRAFORM
       - name: Setup terraform
@@ -91,8 +91,9 @@ jobs:
       - name: Instalar Docker
         run: |
           cd tf
-          sudo apt-get update
-          sudo apt-get install -y docker.io
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
+          sudo usermod -aG docker $USER
           sudo systemctl start docker
           sudo systemctl enable docker
 
