nmr-bucket en el destroy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,7 +115,7 @@ jobs:
       # DESCARGAR tf.state
       - name: Descargar estado de Terraform desde S3
         run: |
-          aws s3 cp s3://mi-bucket/terraform.tfstate tf/terraform.tfstate
+          aws s3 cp s3://nmr-bucket/terraform.tfstate tf/terraform.tfstate
 
       # TERRAFORM DESTROY
       - name: TERRAFORM DESTROY
