--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,6 +1,6 @@
 
 Listen 443
-<VirtualHost _default_:443>
+<VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
     ServerName neikap.work.gd
 
@@ -10,7 +10,6 @@ Listen 443
     SSLCertificateChainFile "/usr/local/apache2/conf/ca_bundle.crt"
 
     <Directory "/usr/local/apache2/htdocs">
-        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
