--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,5 +1,9 @@
 
-Listen 443
+# Configuración del proxy inverso
+ProxyRequests Off
+ProxyPreserveHost On
+
+# Proxy para las solicitudes hacia /api
 <VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
     ServerName neikap.work.gd
@@ -13,4 +17,8 @@ Listen 443
         AllowOverride All
         Require all granted
     </Directory>
+
+    # Redirigir las solicitudes hacia /api al puerto 3000
+    ProxyPass /api http://localhost:3000
+    ProxyPassReverse /api http://localhost:3000
 </VirtualHost>
