intento JSONS-SV (proxypass)

--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,9 +1,5 @@
 
-# Configuración del proxy inverso
-ProxyRequests Off
-ProxyPreserveHost On
-
-# Proxy para las solicitudes hacia /api
+Listen 443
 <VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
     ServerName neikap.work.gd
@@ -17,8 +13,4 @@ ProxyPreserveHost On
         AllowOverride All
         Require all granted
     </Directory>
-
-    # Redirigir las solicitudes hacia /api al puerto 3000 (json-server)
-    ProxyPass /api http://localhost:3000
-    ProxyPassReverse /api http://localhost:3000
 </VirtualHost>
