JSON-SV (proxy2)

--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,8 +1,6 @@
-
-Listen 443
 <VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
-    ServerName neikap.work.gd
+    ServerName neikap.work.gd  # Asegúrate de que sea tu dominio correcto
 
     SSLEngine on
     SSLCertificateFile "/usr/local/apache2/conf/certificate.crt"
@@ -13,4 +11,11 @@ Listen 443
         AllowOverride All
         Require all granted
     </Directory>
+
+    # Proxy hacia JSON Server en /api
+    ProxyPass /api http://localhost:3000
+    ProxyPassReverse /api http://localhost:3000
+
+    # Forzar HTTPS para todas las solicitudes
+    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
 </VirtualHost>
