--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,7 +1,7 @@
 
 <VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
-    ServerName neikap.work.gd  # Asegúrate de que sea tu dominio correcto
+    ServerName neikap.work.gd
 
     SSLEngine on
     SSLCertificateFile "/usr/local/apache2/conf/certificate.crt"
