--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -3,6 +3,8 @@
     DocumentRoot "/usr/local/apache2/htdocs"
     ServerName neikap.work.gd
 
+    Redirect permanent / https://neikap.work.gd/
+
     SSLEngine on
     SSLCertificateFile "/usr/local/apache2/conf/certificate.crt"
     SSLCertificateKeyFile "/usr/local/apache2/conf/private.key"
@@ -14,8 +16,8 @@
     </Directory>
 
     # Proxy hacia JSON Server en /api
-    ProxyPass /api http://localhost:3000
-    ProxyPassReverse /api http://localhost:3000
+    ProxyPass /api http://localhost:3000/users
+    ProxyPassReverse /api http://localhost:3000/users
 
     # Forzar HTTPS para todas las solicitudes
     Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
