--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -1,9 +1,8 @@
 
+Listen 443
 <VirtualHost *:443>
     DocumentRoot "/usr/local/apache2/htdocs"
     ServerName neikap.work.gd
-
-    Redirect permanent / https://neikap.work.gd/
 
     SSLEngine on
     SSLCertificateFile "/usr/local/apache2/conf/certificate.crt"
@@ -14,11 +13,4 @@
         AllowOverride All
         Require all granted
     </Directory>
-
-    # Proxy hacia JSON Server en /api
-    ProxyPass /api http://localhost:3000/users
-    ProxyPassReverse /api http://localhost:3000/users
-
-    # Forzar HTTPS para todas las solicitudes
-    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
 </VirtualHost>
