--- a/tf/httpd-ssl.conf
+++ b/tf/httpd-ssl.conf
@@ -14,3 +14,8 @@ Listen 443
         Require all granted
     </Directory>
 </VirtualHost>
+
+<VirtualHost *:80>
+    ServerName neikap.work.gd
+    Redirect permanent / https://neikap.work.gd/
+</VirtualHost>
