pruebas unitarias & documentacion JS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,26 @@ jobs:
       - name: Checkout del repositorio
         uses: actions/checkout@v4
 
+      # INSTALAR JSDOC
+      - name: Instalar JSDoc
+        run: |
+          npm install -g jsdoc
+
+      # DOCUMENTAR EL JAVASCRIPT
+      - name: Generar la documentación JavaScript
+        run: |
+          jsdoc ./js/login.js -d ./js/docs
+
+      # INSTALAR JSEST (para pruebas unitarias)
+      - name: Instalar Jest para pruebas unitarias
+        run: |
+          npm install --save-dev jest
+
+      # REALIZAR LAS PRUEBAS UNITARIAS
+      - name: Pruebas unitarias
+        run: |
+          npm test
+
       # CONFIGURAR CREDENCIALES AWS
       - name: Configurar credenciales AWS
         uses: aws-actions/configure-aws-credentials@v4
